# Copyright (C) 2013-2016 David 'Mokon' Bond, All Rights Reserved

AC_INIT([Mokon Common Library],[DEV-VERSION],[mokon@mokon.net],[mcommon],
        [http://mokon.net])

m4_include([templates/configure.m4])
m4_include([templates/configure_cpp.m4])

AC_REVISION([$Revision: 0.0 $])
M_COPYRIGHT_PROPRIETARY([David 'Mokon' Bond],[2013-2016])

M_PROG_DEPS([mcommon],[])
AC_OUTPUT
