# Copyright (C) 2012-2014 David 'Mokon' Bond, All Rights Reserved

include ../templates/object/Makefile.am

lib_LTLIBRARIES = libmcommon.la
libmcommon_la_LDFLAGS = -version-info 0:0:0

libmcommon_la_SOURCES = \
  ${SRC_DIR}/mcommon/main.cpp \
  ${SRC_DIR}/mcommon/Gender.cpp \
  ${SRC_DIR}/mcommon/Quantity.cpp \
  ${SRC_DIR}/mcommon/Timer.cpp \
  ${SRC_DIR}/mcommon/Unit.cpp

